# scalable-rectpack

./: README.md  pyproject.toml
src/scalable_rectpack/: __init__.py  _core.py
src/scalable_rectpack_visual/: algorithm.py  engine.py  main.py  mpl.py  utils.py
src/scalable_rectpack_visual/components/: control.py  navigation.py  result_view.py
tests/: test_import.py
